add marker cluster

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- core CSS -->
     <link href="//cdn.bootcss.com/bulma/0.1.0/css/bulma.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <!-- leaflet CSS -->
     <link href="//cdn.bootcss.com/leaflet/1.0.0-rc.2/leaflet.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/leaflet.markercluster/1.0.0-rc.1.0/MarkerCluster.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/leaflet.markercluster/1.0.0-rc.1.0/MarkerCluster.Default.css" rel="stylesheet">
 </head>
 
 <body>
