reconstruct page layout

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <body>
     <app-header></app-header>
 
-    <app-main>
-        <app-content slot="app-left"></app-content>
-        <app-sidebar slot="app-right"></app-sidebar>
-    </app-main>
+    <app-layout>
+        <app-content slot="app-content"></app-content>
+        <app-sidebar slot="app-sidebar"></app-sidebar>
+    </app-layout>
 
     <app-footer></app-footer>
 
