--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link href="//cdn.bootcss.com/leaflet/1.0.0-rc.2/leaflet.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/leaflet.markercluster/1.0.0-rc.1.0/MarkerCluster.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/leaflet.markercluster/1.0.0-rc.1.0/MarkerCluster.Default.css" rel="stylesheet">
+
+    <!--[if lte IE 9]>
+        <meta http-equiv="refresh" content="0; url=http://outdatedbrowser.com/zh-cn" />
+    <![endif]-->
 </head>
 
 <body>
