change footer ui

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="滚蛋吧，莆田系，莆田系医院大揭秘">
     <meta name="author" content="putianxi@gmail.com">
     <meta name="Keywords" content="滚蛋吧,莆田系,医疗事故,民营医院">
-    <title>滚蛋吧，莆田系</title>
+    <title>滚蛋吧！莆田系</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/images/common/favicon.ico">
     <!-- core CSS -->
