--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="滚蛋吧，莆田系，莆田系医院大揭秘">
     <meta name="author" content="putianxi@gmail.com">
@@ -12,7 +12,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/images/common/favicon.ico">
     <!-- core CSS -->
-    <link href="//cdn.bootcss.com/bulma/0.1.0/css/bulma.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bulma/0.1.2/css/bulma.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- leaflet CSS -->
     <link href="//cdn.bootcss.com/leaflet/1.0.0-rc.2/leaflet.css" rel="stylesheet">
